erDiagram
    %% User Management
    USERS {
        int id PK
        string username UK
        string email UK
        string password_hash
        string full_name
        enum role
        string status
        json permissions
    }

    %% Master Data: Ingredients
    INGREDIENTS {
        int id PK
        string ingredient_id
        string blind_code
        string mat_sap_code
        string re_code
        string name
        float std_package_size
        string status
    }

    %% Master Data: SKU (Recipes)
    SKU_MASTERS {
        int id PK
        string sku_id UK
        string sku_name
        float std_batch_size
        string status
    }

    SKU_STEPS {
        int id PK
        string sku_id FK
        string phase_number
        int sub_step
        string action
        string re_code FK
        float require
        string uom
    }

    SKU_MASTERS ||--|{ SKU_STEPS : "has steps"

    %% Inventory
    INGREDIENT_INTAKE_LISTS {
        int id PK
        string intake_lot_id UK
        string lot_id
        string warehouse_location
        string mat_sap_code
        string re_code
        float intake_vol
        float remain_vol
        datetime expire_date
        string status
    }

    INGREDIENT_INTAKE_HISTORY {
        int id PK
        int intake_list_id FK
        string action
        string old_status
        string new_status
        string changed_by
    }

    INGREDIENT_INTAKE_LISTS ||--|{ INGREDIENT_INTAKE_HISTORY : "logs history"

    %% Production Planning
    PRODUCTION_PLANS {
        int id PK
        string plan_id UK
        string sku_id FK
        string plant
        float total_volume
        float batch_size
        int num_batches
        string status
        date start_date
        date finish_date
    }

    PRODUCTION_BATCHES {
        int id PK
        int plan_id FK
        string batch_id UK
        string sku_id
        string plant
        float batch_size
        string status
    }

    PRODUCTION_PLANS ||--|{ PRODUCTION_BATCHES : "generates"
    PRODUCTION_PLANS ||--|{ PRODUCTION_PLAN_HISTORY : "logs history"

    %% Pre-Batch Execution
    PB_TASKS {
        int id PK
        int batch_db_id FK
        string batch_id
        string re_code
        string ingredient_name
        float required_volume
        string wh
        int status
    }

    PB_LOGS {
        int id PK
        int task_id FK
        string batch_record_id UK
        string plan_id
        string re_code
        int package_no
        float net_volume
        string intake_lot_id FK
    }

    PRODUCTION_BATCHES ||--|{ PB_TASKS : "requires ingredients"
    PB_TASKS ||--|{ PB_LOGS : "records weighing"
    INGREDIENT_INTAKE_LISTS ||--|{ PB_LOGS : "source of material"

    %% Lookups
    PLANTS {
        int id PK
        string plant_id
        string plant_name
    }

    WAREHOUSES {
        int id PK
        string warehouse_id
        string name
    }
